fix fe specs, more work on highlight box menu

--- a/formuladb/icons/frmdb-icons.html
+++ b/formuladb/icons/frmdb-icons.html
@@ -2331,6 +2331,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" frmdb-i-after-box"></i>
+            </span>
+            <br>
+            <span class='label'>after-box</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" frmdb-i-arrow-down"></i>
             </span>
             <br>
@@ -3285,6 +3294,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" frmdb-i-inside-box"></i>
+            </span>
+            <br>
+            <span class='label'>inside-box</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" frmdb-i-instagram"></i>
             </span>
             <br>
@@ -3721,6 +3739,15 @@
             </span>
             <br>
             <span class='label'>tint</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
+                <i class=" frmdb-i-tmp"></i>
+            </span>
+            <br>
+            <span class='label'>tmp</span>
         </div>
 
 
