--- a/formuladb/icons/frmdb-icons.html
+++ b/formuladb/icons/frmdb-icons.html
@@ -2421,6 +2421,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" frmdb-i-bullseye"></i>
+            </span>
+            <br>
+            <span class='label'>bullseye</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" frmdb-i-calendar-alt"></i>
             </span>
             <br>
