--- a/formuladb/icons/frmdb-icons.html
+++ b/formuladb/icons/frmdb-icons.html
@@ -2403,6 +2403,15 @@
 
         <div class="preview">
             <span class="inner">
+                <i class=" frmdb-i-before-box"></i>
+            </span>
+            <br>
+            <span class='label'>before-box</span>
+        </div>
+
+
+        <div class="preview">
+            <span class="inner">
                 <i class=" frmdb-i-behance-square"></i>
             </span>
             <br>
