--- a/git/formuladb-env/frmdb-apps/themes/_footer.html
+++ b/git/formuladb-env/frmdb-apps/themes/_footer.html
@@ -1,80 +1,69 @@
 <footer class="frmdb-t-footer" data-frmdb-fragment="_footer.html">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3  col-md-6 col-sm-6">
-                <h5>About Agency</h5>
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sit amet hendrerit neque. Mauris egestas aliquam purus sed
+<div class="container">
+    <div class="row">
+        <div class="col-lg-3  col-md-6 col-sm-6">
+            <h5>About Agency</h5>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sit amet hendrerit neque. Mauris egestas aliquam purus sed
                     consequat.</p>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-                <h5 class="footer_title">Navigation Links</h5>
-                <div class="row">
-                    <div class="col-4">
-                        <a href="#">Home</a>
-                        <a href="#">Feature</a>
-                        <a href="#">Services</a>
-                        <a href="#">Portfolio</a>
-                    </div>
-                    <div class="col-4">
-                        <a href="#">Team</a>
-                        <a href="#">Pricing</a>
-                        <a href="#">Blog</a>
-                        <a href="#">Contact</a>
-                    </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6">
+            <h5 class="footer_title">Navigation Links</h5>
+            <div class="row">
+                <div class="col-4">
+                    <a href="#">Home</a>
+                    <a href="#">Feature</a>
+                    <a href="#">Services</a>
+                    <a href="#">Portfolio</a>
                 </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-                <div class="single-footer-widget">
-                    <h5>Newsletter</h5>
-                    <p class="text-muted">Etiam eget quam vel leo dapibus facilisis a at ante. In et lobortis arcu, vel consequat ante.</p>
-                    <div id="mc_embed_signup">
-                        <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01"
-                            method="get" class="subscribe_form relative">
-                            <div class="input-group d-flex flex-row">
-                                <input name="EMAIL" placeholder="Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '"
-                                    required="" type="email">
-                                <button class="btn sub-btn">
-                                    <span class="lnr lnr-location"></span>
-                                </button>
-                            </div>
-                            <div class="mt-10 info"></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-sm-6">
-                <h6>InstaFeed</h6>
-                <div class="d-flex flex-wrap">
-                    <!-- <img class="m-1" src="/formuladb-env/static/frmdb-apps/Hotel_Booking/Image-01.jpg" alt="">
-                    <img class="m-1" src="/formuladb-env/static/frmdb-apps/Hotel_Booking/Image-02.jpg" alt="">
-                    <img class="m-1" src="/formuladb-env/static/frmdb-apps/Hotel_Booking/Image-03.jpg" alt="">
-                    <img class="m-1" src="/formuladb-env/static/frmdb-apps/Hotel_Booking/Image-04.jpg" alt="">
-                    <img class="m-1" src="/formuladb-env/static/frmdb-apps/Hotel_Booking/Image-05.jpg" alt="">
-                    <img class="m-1" src="/formuladb-env/static/frmdb-apps/Hotel_Booking/Image-06.jpg" alt="">
-                    <img class="m-1" src="/formuladb-env/static/frmdb-apps/Hotel_Booking/Image-07.jpg" alt="">
-                    <img class="m-1" src="/formuladb-env/static/frmdb-apps/Hotel_Booking/Image-08.jpg" alt=""> -->
+                <div class="col-4">
+                    <a href="#">Team</a>
+                    <a href="#">Pricing</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Contact</a>
                 </div>
             </div>
         </div>
-        <div class="border_line"></div>
-        <div class="row footer-bottom d-flex justify-content-between align-items-center">
-            <p class="col-lg-8 col-sm-12 footer-text m-0">
-                Copyright © 2019 formuladb.io
-            </p>
-            <div class="col-lg-4 col-sm-12 footer-social">
-                <a href="#">
-                    <i class="frmdb-i-facebook"></i>
-                </a>
-                <a href="#">
-                    <i class="frmdb-i-twitter"></i>
-                </a>
-                <a href="#">
-                    <i class="frmdb-i-dribbble"></i>
-                </a>
-                <a href="#">
-                    <i class="frmdb-i-behance"></i>
-                </a>
+        <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="single-footer-widget">
+                <h5>Newsletter</h5>
+                <p class="text-muted">Etiam eget quam vel leo dapibus facilisis a at ante. In et lobortis arcu, vel consequat ante.</p>
+                <div id="mc_embed_signup">
+                    <form target="_blank" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="subscribe_form relative">
+                        <div class="input-group d-flex flex-row">
+                            <input name="EMAIL" placeholder="Email Address" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Email Address '" required="" type="email">
+                            <button class="btn sub-btn">
+                                <span class="lnr lnr-location"></span>
+                            </button>
+                        </div>
+                        <div class="mt-10 info"></div>
+                    </form>
+                </div>
             </div>
+        </div>
+        <div class="col-lg-3 col-md-6 col-sm-6">
+            <h6>InstaFeed</h6>
+            <div class="d-flex flex-wrap"></div>
         </div>
     </div>
+    <div class="border_line"></div>
+    <div class="row footer-bottom d-flex justify-content-between align-items-center">
+        <p class="col-lg-8 col-sm-12 footer-text m-0">
+                Copyright © 2019 formuladb.io
+            </p>
+        <div class="col-lg-4 col-sm-12 footer-social">
+            <a href="#">
+                <i class="frmdb-i-facebook"></i>
+            </a>
+            <a href="#">
+                <i class="frmdb-i-twitter"></i>
+            </a>
+            <a href="#">
+                <i class="frmdb-i-dribbble"></i>
+            </a>
+            <a href="#">
+                <i class="frmdb-i-behance"></i>
+            </a>
+        </div>
+    </div>
+</div>
 </footer>
