--- a/git/formuladb-env/frmdb-apps/themes/landing-page.html
+++ b/git/formuladb-env/frmdb-apps/themes/landing-page.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <title>FormulaDB Theme - Landing Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
-    <!-- Comfort -->
-    <!-- <link rel="stylesheet" id="frmdb-look-css" href="_css/lux-ffc208-353b41.css"> -->
-    <!-- Grand Frames -->
-    <link rel="stylesheet" id="frmdb-look-css" href="/formuladb-env/css/cosmo-cb8670-363636.css">
+    <title>FormulaDB Themes</title>
 </head>
-
-<body>
+<body class="frmdb-editor-normal">
     <div class="frmdb-t-main-nav">
-        <nav data-frmdb-fragment="_nav.html" src="_nav.html"></nav>
+        <div data-frmdb-fragment="_nav.html"></div>
     </div>
     <header class="frmdb-t-cover" style="--frmdb-bg-img: url('/formuladb-env/static/frmdb-apps/themes/bg1.jpg')">
         <div class="frmdb-t-main" style="--frmdb-bg-img: url('/formuladb-env/static/frmdb-apps/themes/bg2.jpg')">
@@ -29,10 +19,9 @@
             </div>
         </div>
         <div class="frmdb-t-aside">
-            <form data-frmdb-fragment="_form.html" src="_form.html"></form>
+            <div data-frmdb-fragment="_form.html"></div>
         </div>
     </header>
-
     <section class="container py-5">
         <div class="text-center mb-5">
             <h2 id="thememediacards">Cards with Images</h2>
@@ -41,7 +30,7 @@
         <div class="card-deck">
             <div class="card frmdb-t-card-img">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/static/frmdb-apps/themes/card1.jpg" alt="" />
+                    <img src="/formuladb-env/static/frmdb-apps/themes/card1.jpg" alt="">
                 </div>
                 <div class="card-body">
                     <h5>Card 1 title</h5>
@@ -49,10 +38,12 @@
                     <p>Quisque ornare, quam a blandit malesuada</p>
                 </div>
                 <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)">Action</a>
+                    <a href="javascript:void(0)" class="">Action</a>
                 </div>
                 <div class="frmdb-t-card-note">
-                    <span>INFO <small>info</small></span>
+                    <span>INFO 
+                        <small>info</small>
+                    </span>
                 </div>
             </div>
             <div class="card frmdb-t-card-img">
@@ -65,10 +56,12 @@
                     <p>Integer sit amet nisi viverra, pharetra nibh vitae</p>
                 </div>
                 <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)">Action</a>
+                    <a href="javascript:void(0)" class="">Action</a>
                 </div>
                 <div class="frmdb-t-card-note">
-                    <span>INFO <small>info</small></span>
+                    <span>INFO 
+                        <small>info</small>
+                    </span>
                 </div>
             </div>
             <div class="card frmdb-t-card-img">
@@ -81,10 +74,12 @@
                     <p>Curabitur suscipit, massa eu maximus fringilla</p>
                 </div>
                 <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)">Action</a>
+                    <a href="javascript:void(0)" class="">Action</a>
                 </div>
                 <div class="frmdb-t-card-note">
-                    <span>INFO <small>info</small></span>
+                    <span>INFO 
+                        <small>info</small>
+                    </span>
                 </div>
             </div>
             <div class="card frmdb-t-card-img">
@@ -97,16 +92,16 @@
                     <p>Etiam porta magna eu rutrum rhoncus</p>
                 </div>
                 <div class="frmdb-t-card-action">
-                    <a href="javascript:void(0)">Action</a>
+                    <a href="javascript:void(0)" class="">Action</a>
                 </div>
                 <div class="frmdb-t-card-note">
-                    <span>INFO <small>info</small></span>
+                    <span>INFO 
+                        <small>info</small>
+                    </span>
                 </div>
             </div>
         </div>
     </section>
-
-
     <section class="my-5 py-5 frmdb-bg frmdb-bg-parallax" style="--frmdb-bg-img: url('/formuladb-env/static/frmdb-apps/themes/bg-right.jpg')">
         <div class="container">
             <div class="row">
@@ -119,8 +114,6 @@
             </div>
         </div>
     </section>
-
-
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
@@ -136,9 +129,6 @@
             </div>
         </div>
     </section>
-
-
-
     <section class="my-5 py-5 frmdb-section-dark frmdb-bg-tint-parallax frmdb-bg-tint-secondary-75" style="--frmdb-bg-img: url('/formuladb-env/static/frmdb-apps/themes/bg3.jpg')">
         <div class="section_title text-center">
             <h2 id="themeiconcards">Cards with Icons</h2>
@@ -188,8 +178,6 @@
             </div>
         </div>
     </section>
-
-
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col text-center d-flex flex-column justify-content-center">
@@ -205,12 +193,9 @@
             </div>
         </div>
     </section>
-
-    <div data-frmdb-fragment="_footer.html" src="_footer.html"></div>
+    <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
-
+    <frmdb-fe></frmdb-fe>
 </body>
-
 </html>
-
 </html>
