--- a/formuladb/editor-new-column-modal.html
+++ b/formuladb/editor-new-column-modal.html
@@ -19,7 +19,21 @@
                         <div class="col-sm-9 input">
                             <div>
                                 <input name="columnName" type="text" class="form-control" placeholder="new_column_name" required pattern="[a-z0-9_]+"
-                                    oninput="this.value = this.value.replace(/[^a-z0-9_]/g, '_')">
+                                    oninput="this.value = this.value.replace(/[A-Z]/g, v => v.toLowerCase()).replace(/[^a-z0-9_]/g, '_'); 
+                                    this.closest('form').querySelector('#columnDisplayName').value = this.value.replace(/_/g, ' ').replace(/(^|(?<= ))[a-z]/g, v => v.toUpperCase())">
+                            </div>
+
+                            <div class="alert alert-danger" role="alert" style="display: none">
+                                A simple danger alert—check it out!
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="form-group row" data-key="href">
+                        <label class="col-sm-3 control-label">Column Label</label>
+                        <div class="col-sm-9 input">
+                            <div>
+                                <input id="columnDisplayName" type="text" class="form-control" placeholder="New App Name" disabled>
                             </div>
 
                             <div class="alert alert-danger" role="alert" style="display: none">
