--- a/formuladb/editor-new-table-modal.html
+++ b/formuladb/editor-new-table-modal.html
@@ -18,7 +18,22 @@
                         <div class="col-sm-9 input">
                             <div>
                                 <input name="tableName" type="text" class="form-control" placeholder="New_Table_Name" required pattern="[a-zA-Z_]+"
-                                    oninput="this.value = this.value.replace(/[^a-zA-Z_+]/g, '_').replace(/^./, function(v) { return v.toUpperCase(); });">
+                                    oninput="this.value = this.value.replace(/[^a-zA-Z_+]/g, '_').replace(/(?<=(^|_))./g, v => v.toUpperCase()); 
+                                    this.closest('form').querySelector('#tableDisplayName').value = this.value.replace(/_/g, ' ')">
+                            </div>
+
+                            <div class="alert alert-danger" role="alert" style="display: none">
+                                A simple danger alert—check it out!
+                            </div>
+                        </div>
+                    </div>
+
+                    
+                    <div class="form-group row" data-key="href">
+                        <label class="col-sm-3 control-label">Table Label</label>
+                        <div class="col-sm-9 input">
+                            <div>
+                                <input id="tableDisplayName" type="text" class="form-control" placeholder="New App Name" disabled>
                             </div>
 
                             <div class="alert alert-danger" role="alert" style="display: none">
