--- a/git/formuladb-env/frmdb-apps/base-app/landing-page.html
+++ b/git/formuladb-env/frmdb-apps/base-app/landing-page.html
@@ -11,7 +11,7 @@
         <div class="frmdb-t-main" style="--frmdb-bg-img: url('/formuladb-env/static/frmdb-apps/base-app/bg2.jpg')">
             <div class="jumbotron">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
-                <h1 class="display-4">Title of website</h1>
+                <h1 class="display-4">Title of web app</h1>
                 <p>Lead paragraph providing a short introduction to you website or app,
                     <br>it would be good to keep it under two lines of text
                 </p>
@@ -195,6 +195,7 @@
     </section>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
 </body>
 </html>
