--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -91,7 +91,7 @@
                 </a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" data-frmdb-table="$FRMDB.$App[]" data-frmdb-value="$FRMDB.$App[]._id"
-                        data-frmdb-attr="href:CONCATENATE('../', $_):$FRMDB.$App[]._id">app 1</a>
+                        data-frmdb-attr="href:CONCATENATE('../', _id, '/index.html'):$FRMDB.$App[]">app 1</a>
                 </div>
             </li>
             <li class="nav-item dropdown frmdb-dropdown-hover">
