more work on data binding

--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -118,7 +118,7 @@
                     aria-expanded="false" data-frmdb-value="$frmdb.selectedTableId">
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" data-frmdb-table="$frmdb.tables[]" data-frmdb-value="$frmdb.tables[]._id" href="javascript:void(0)">table 1</a>
+                    <a class="dropdown-item" data-frmdb-table="$FRMDB.$Table[]" data-frmdb-value="$FRMDB.$Table[]._id" href="javascript:void(0)">table 1</a>
                 </div>
             </li>
             <li class="nav-item dropdown frmdb-dropdown-hover">
