--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -120,7 +120,7 @@
                 </a>
                 <div class="dropdown-menu">
                     <a class="dropdown-item" data-frmdb-table="$FRMDB.$Table[]" data-frmdb-table-limit="50" data-frmdb-value="$FRMDB.$Table[]._id"
-                        href="javascript:void(0)">table 1</a>
+                        href="javascript:void(0)" onclick="$FRMDB_EDITOR.changeTable(this)">table 1</a>
                 </div>
             </li>
             <li class="nav-item dropdown frmdb-dropdown-hover">
@@ -175,83 +175,24 @@
         <frmdb-element-editor></frmdb-element-editor>
     </div>
 
-    <!-- new page modal-->
-    <div class="modal fade" id="new-page-modal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-
-            <form data-frmdb-ignore-form>
-
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <p class="modal-title text-primary"><i class="frmdb-i-file"></i> New page</p>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true"><small><i class="frmdb-i-close"></i></small></span>
-                        </button>
-                    </div>
-
-                    <div class="modal-body text">
-                        <div class="form-group row" data-key="type">
-                            <label class="col-sm-3 control-label">
-                                Template
-                                <abbr class="badge badge-pill badge-secondary" title="This template will be used as a start">?</abbr>
-                            </label>
-                            <div class="col-sm-9 input">
-                                <div>
-                                    <select class="form-control custom-select" name="startTemplateUrl">
-                                        <option class="dropdown-item" data-frmdb-table="$FRMDB.$Page[]" data-frmdb-value="$FRMDB.$Page[].name"
-                                            data-frmdb-attr="value::$FRMDB.$Page[].url"></option>
-                                    </select>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="form-group row" data-key="href">
-                            <label class="col-sm-3 control-label">Page name</label>
-                            <div class="col-sm-9 input-group">
-                                <input name="title" type="text" class="form-control" placeholder="new-page-name" required pattern="[-a-zA-Z]+"
-                                    oninput="this.value = this.value.replace(/[^a-zA-Z_+]/g, '-')">
-                                <div class="input-group-append">
-                                    <div class="input-group-text">.html</div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="alert alert-danger" role="alert" style="display: none">
-                            A simple danger alert—check it out!
-                        </div>
-
-                    </div>
-
-                    <div class="modal-footer">
-                        <button class="btn btn-primary btn-lg" type="submit"><i class="frmdb-i-check"></i> Create page</button>
-                        <button class="btn btn-secondary btn-lg" type="reset" data-dismiss="modal"><i class="frmdb-i-close"></i> Cancel</button>
-                    </div>
-                </div>
-
-            </form>
-
-        </div>
-    </div>
-
-
     <frmdb-add-element></frmdb-add-element>
     <frmdb-img-editor></frmdb-img-editor>
     <frmdb-icon-editor></frmdb-icon-editor>
 
-    <iframe src="/formuladb/editor-edit-record-modal.html"
-        onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
-    <iframe src="/formuladb/editor-intro-video-modal.html"
-        onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
-    <iframe src="/formuladb/editor-new-column-modal.html"
-        onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
-    <iframe src="/formuladb/editor-new-table-modal.html"
-        onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
-    <iframe src="/formuladb/editor-new-app-modal.html"
-        onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
-
     <script src="/formuladb/frmdb-fe.js"></script>
-    <!-- <script src="/formuladb/frmdb-editor.js"></script> -->
-    <!-- <script src="/formuladb/frmdb-data-grid.js"></script> -->
+    
+    <iframe src="/formuladb/editor-edit-record-modal.html"
+        onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);$UPDATEDOM(this.previousElementSibling);this.remove()"></iframe>
+    <iframe src="/formuladb/editor-intro-video-modal.html"
+        onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);$UPDATEDOM(this.previousElementSibling);this.remove()"></iframe>
+    <iframe src="/formuladb/editor-new-column-modal.html"
+        onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);$UPDATEDOM(this.previousElementSibling);this.remove()"></iframe>
+    <iframe src="/formuladb/editor-new-table-modal.html"
+        onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);$UPDATEDOM(this.previousElementSibling);this.remove()"></iframe>
+    <iframe src="/formuladb/editor-new-app-modal.html"
+        onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);$UPDATEDOM(this.previousElementSibling);this.remove()"></iframe>
+    <iframe src="/formuladb/editor-new-page-modal.html"
+        onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);$UPDATEDOM(this.previousElementSibling);this.remove()"></iframe>
 
 </body>
 
