fix page properties save/read

--- a/git/formuladb-env/frmdb-apps/base-app/blog-post-page.html
+++ b/git/formuladb-env/frmdb-apps/base-app/blog-post-page.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>Blog Post Example Page</title>
-    <meta name="description" content="">
+    <meta name="description" content="Blog post example page to be used when adding new blog post pages">
     <meta name="author" content="alex">
     <meta name="frmdb_display_date" content="">
 </head>
