--- a/git/formuladb-env/frmdb-apps/design-therapy/index.html
+++ b/git/formuladb-env/frmdb-apps/design-therapy/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>FormulaDB Themes</title>
 </head>
-<body data-frmdb-theme="GrandFrames" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0" class="frmdb-editor-normal">
+<body data-frmdb-theme="GrandFrames" class="frmdb-editor-normal">
     <div class="frmdb-t-main-nav fixed-top row frmdb-bg-dark-30 shadow py-4 border-bottom border-bottom-2 border-primary justify-content-center">
         <div data-frmdb-fragment="_nav.html"></div>
     </div>
