--- a/git/formuladb-env/frmdb-apps/health-guardians/index.html
+++ b/git/formuladb-env/frmdb-apps/health-guardians/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>FormulaDB Themes</title>
 </head>
-<body data-frmdb-theme="Inclined" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0" class="frmdb-editor-normal text-center">
+<body data-frmdb-theme="Inclined" class="frmdb-editor-normal text-center">
     <div class="frmdb-t-main-nav">
         <div data-frmdb-fragment="_nav.html"></div>
     </div>
