--- a/git/formuladb-env/frmdb-apps/summer-villa/index.html
+++ b/git/formuladb-env/frmdb-apps/summer-villa/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>FormulaDB Themes</title>
 </head>
-<body data-frmdb-theme="Comfort" data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0" class="text-center frmdb-editor-normal">
+<body data-frmdb-theme="Comfort" class="text-center frmdb-editor-normal">
     <div class="frmdb-t-main-nav container bg-white fixed-top shadow">
         <div data-frmdb-fragment="_nav.html"></div>
     </div>
