--- a/formuladb/editor.html
+++ b/formuladb/editor.html
@@ -34,9 +34,9 @@
                 <button class="btn btn-light" title="Save Page" id="save-btn">
                     <i class="frmdb-i-save"></i>
                 </button>
-                <button disabled class="btn btn-light" title="Publish to live environment" id="publish-btn" data-frmdb-action="saveApp">
+                <a href="./index.html" target="_blank" class="btn btn-light" title="Go To App In Different tab" id="publish-btn" data-frmdb-action="saveApp">
                     <i class="frmdb-i-upload"></i>
-                </button>
+                </a>
             </div>
 
             <frmdb-theme-customizer></frmdb-theme-customizer>
