fix screenshot name

--- a/git/formuladb-env/frmdb-apps/blog-add-on-app/blog-post-2.html
+++ b/git/formuladb-env/frmdb-apps/blog-add-on-app/blog-post-2.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <title>Post 2</title>
-    <meta name="description" content="desc">
     <meta name="author" content="alex">
+    <meta name="description" content="desc">
     <meta name="frmdb_display_date" content="2020-03-12">
 </head>
 <body class="frmdb-editor-normal">
@@ -12,7 +12,7 @@
     </div>
     <header class="frmdb-t-header" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg1.jpg')">
         <div class="jumbotron">
-            <h1 class="display-4">Blog Post Title</h1>
+            <h1 class="display-4">Blog Post 2</h1>
             <p>Lead paragraph providing a short introduction to you blog post.
                 <br>
             </p>
@@ -36,6 +36,7 @@
     </section>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
