--- a/git/formuladb-env/frmdb-apps/blog-add-on-app/blog-post-1.html
+++ b/git/formuladb-env/frmdb-apps/blog-add-on-app/blog-post-1.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <title>Post 1</title>
-    <meta name="description" content="desc">
     <meta name="author" content="alex">
+    <meta name="description" content="desc">
     <meta name="frmdb_display_date" content="2020-03-11">
 </head>
 <body class="frmdb-editor-normal">
@@ -14,7 +14,7 @@
         <div class="frmdb-t-main" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg2.jpg')">
             <div class="jumbotron">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
-                <h1 class="display-4">Title of web app</h1>
+                <h1 class="display-4">Blog Post 1</h1>
                 <p>Lead paragraph providing a short introduction to you website or app,
                     <br>it would be good to keep it under two lines of text
                 </p>
@@ -33,7 +33,7 @@
         <div class="card-deck">
             <div class="card frmdb-t-card-img">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/base-app/static/card1.jpg" alt="">
+                    <img src="/formuladb-env/frmdb-apps/base-app/static/card1.jpg" alt="" class="">
                 </div>
                 <div class="card-body">
                     <h5>Card 1 title</h5>
@@ -51,7 +51,7 @@
             </div>
             <div class="card frmdb-t-card-img">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/base-app/static/card2.jpg" alt="">
+                    <img src="/formuladb-env/frmdb-apps/base-app/static/card2.jpg" alt="" class="">
                 </div>
                 <div class="card-body">
                     <h5>Card 2 title</h5>
@@ -69,7 +69,7 @@
             </div>
             <div class="card frmdb-t-card-img">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/base-app/static/card3.jpg" alt="">
+                    <img src="/formuladb-env/frmdb-apps/base-app/static/card3.jpg" alt="" class="">
                 </div>
                 <div class="card-body">
                     <h5>Card 3 title</h5>
@@ -87,7 +87,7 @@
             </div>
             <div class="card frmdb-t-card-img">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/base-app/static/card4.jpg" alt="">
+                    <img src="/formuladb-env/frmdb-apps/base-app/static/card4.jpg" alt="" class="">
                 </div>
                 <div class="card-body">
                     <h5>Card 4 title</h5>
@@ -198,6 +198,7 @@
     </section>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
 </body>
