allow navigation in preview mode

--- a/git/formuladb-env/frmdb-apps/hotel-booking/_nav.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/_nav.html
@@ -16,6 +16,9 @@
                 <a class="nav-link" href="booking.html">Booking</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="../blog-add-on-app/index.html">Blog</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item">
