--- a/git/formuladb-env/frmdb-apps/hotel-booking/index.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
 <head>
     <title>King Hotel</title>
+    <meta name="author" content="">
+    <meta name="description" content="">
+    <meta name="frmdb_display_date" content="">
 </head>
-<body data-frmdb-theme="Clean" class="frmdb-editor-preview">
+<body data-frmdb-theme="Clean" class="frmdb-editor-normal">
     <div class="frmdb-t-main-nav">
         <div data-frmdb-fragment="_nav.html"></div>
     </div>
@@ -31,7 +34,7 @@
         <div class="card-deck">
             <div class="card frmdb-t-card-img">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg" alt="">
+                    <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg" alt="" class="">
                 </div>
                 <div class="card-body">
                     <h5>Card 1 title</h5>
@@ -49,7 +52,7 @@
             </div>
             <div class="card frmdb-t-card-img">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room3.jpg" alt="">
+                    <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room3.jpg" alt="" class="">
                 </div>
                 <div class="card-body">
                     <h5>Card 2 title</h5>
@@ -67,7 +70,7 @@
             </div>
             <div class="card frmdb-t-card-img">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room1.jpg" alt="">
+                    <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room1.jpg" alt="" class="">
                 </div>
                 <div class="card-body">
                     <h5>Card 3 title</h5>
@@ -85,7 +88,7 @@
             </div>
             <div class="card frmdb-t-card-img">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/hotel-booking/static/facilites_bg.jpg" alt="">
+                    <img src="/formuladb-env/frmdb-apps/hotel-booking/static/facilites_bg.jpg" alt="" class="">
                 </div>
                 <div class="card-body">
                     <h5>Card 4 title</h5>
@@ -196,6 +199,7 @@
     </section>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
 </body>
