--- a/git/formuladb-env/frmdb-apps/hotel-booking/index.html
+++ b/git/formuladb-env/frmdb-apps/hotel-booking/index.html
@@ -10,8 +10,8 @@
     <div class="frmdb-t-main-nav">
         <div data-frmdb-fragment="_nav.html"></div>
     </div>
-    <header class="frmdb-t-cover" style="--frmdb-bg-img:url(&quot;/formuladb-env/frmdb-apps/hotel-booking/static/resort-906102_1920.jpg&quot;);">
-        <div class="frmdb-t-main" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/base-app/static/bg2.jpg')">
+    <header class="frmdb-t-cover" style="--frmdb-bg-img:url('/formuladb-env/frmdb-apps/hotel-booking/static/resort-906102_1920.jpg');">
+        <div class="frmdb-t-main" style="--frmdb-bg-img: url('/formuladb-env/frmdb-apps/hotel-booking/static/resort-906102_1920.jpg')">
             <div class="jumbotron">
                 <h6>Subtitle of app, can be a bit longer in words</h6>
                 <h1 class="display-4">Relax And Enjoy</h1>
@@ -88,7 +88,7 @@
             </div>
             <div class="card frmdb-t-card-img">
                 <div class="frmdb-t-img overflow-hidden">
-                    <img src="/formuladb-env/frmdb-apps/hotel-booking/static/facilites_bg.jpg" alt="" class="">
+                    <img src="/formuladb-env/frmdb-apps/hotel-booking/static/room4.jpg" alt="" class="">
                 </div>
                 <div class="card-body">
                     <h5>Card 4 title</h5>
@@ -121,7 +121,7 @@
     <section class="container py-5 my-5">
         <div class="row">
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/base-app/static/section1.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/hotel-booking/static/palm-966994_1920.jpg" alt="...">
             </div>
             <div class="col text-center d-flex flex-column justify-content-center">
                 <div class="jumbotron">
@@ -193,12 +193,13 @@
                 </div>
             </div>
             <div class="col">
-                <img class="img-fluid" src="/formuladb-env/frmdb-apps/base-app/static/section2.jpg" alt="...">
+                <img class="img-fluid" src="/formuladb-env/frmdb-apps/hotel-booking/static/phuket-1432891_1920.jpg" alt="...">
             </div>
         </div>
     </section>
     <div data-frmdb-fragment="_footer.html"></div>
     <div data-frmdb-fragment="_scripts.html"></div>
+    <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
     <frmdb-fe></frmdb-fe>
